<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".SignupActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_n_up"
        android:textSize="60sp"
        android:textColor="#000"
        android:textStyle="bold"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/nameBox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:layout_marginTop="30dp"
        android:background="@drawable/textbox_size"/>


    <EditText
        android:id="@+id/emailBox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email_id"
        android:layout_marginTop="30dp"
        android:background="@drawable/textbox_size"/>

    <EditText
        android:id="@+id/passwordBox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:hint="@string/pass"
        android:layout_marginTop="30dp"
        android:background="@drawable/textbox_size"/>


    <Button
        android:id="@+id/createButton"
        android:layout_width="349dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/signupbtn_style"
        android:text="@string/Create_an_account"
        android:textColor="#fff"
        android:textSize="18sp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="348dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/loginbtn_style"
        android:text="@string/already_have_an_account"
        android:textColor="#fff"
        android:textSize="15sp" />

</LinearLayout>