<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/welcome_n_back"
        android:textColor="#000"
        android:textSize="60sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailBox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:hint="Email"
        android:layout_marginTop="80dp"
        android:background="@drawable/textbox_size"/>

    <EditText
        android:id="@+id/passwordBox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:hint="Password"
        android:layout_marginTop="30dp"
        android:background="@drawable/textbox_size"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="349dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/loginbtn_style"
        android:text="@string/login"
        android:textColor="#fff"
        android:textSize="18sp" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="351dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/signupbtn_style"
        android:text="@string/create_an_account"
        android:textColor="#fff"
        android:textSize="18sp" />
    
</LinearLayout>